# publicly-private

./: CHANGES.md  CHECKLIST.md  FLOW.md  QUICKREF.md  README.md  SECURITY.md  SETUP.md
backend/: .env.example  .gitignore  QUICKSTART.md  README.md  example-client.ts  extract-keys-for-frontend.ts  package.json  tsconfig.json
backend/src/: crypto.ts  generate-keys.ts  index.ts  test-client.ts
frontend/: .env.example  Cargo.toml  README.md  index.html
frontend/src/: main.rs
