[package]
name = "leptos-csr-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.11", features = ["csr"] }
rsa = { version = "0.9", features = ["std"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
gloo-net = "0.5"
getrandom = { version = "0.2", features = ["js"] }
dotenv_codegen = "0.15"
